# future-coach-dashboard

./: .env.example  .gitignore  AI_USAGE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: aliases.py  config.py  db.py  embeddings.py  llm.py  longitudinal.py  main.py  observability.py  resolver.py  safety.py  schemas.py
backend/app/agents/: copilot.py  generation.py
backend/app/graph/: anatomy.py  ingest.py  member_ingest.py  schema.py
backend/app/grounding/: snomed.py
backend/evaluation/: run.py  worked_examples.py
backend/tests/: conftest.py  test_equipment_context.py  test_interactive_adjustment.py  test_llm_provider.py  test_resolver.py  test_safety.py  test_substitution.py  test_worked_examples.py
backend/tests/fixtures/: worked_examples.json
data/: exercises.json  member-context.json  members-extra.json  members.json  snomed-cache.json
docs/: DESIGN-NOTES.md  HANDOFF-coach-library.md  HANDOFF-protocols-teaser.md  POSTMORTEM.md  SCHEMA.md
docs/examples/: README.md  worked-examples.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.gen.ts  api.ts  index.css
frontend/src/components/: BodyThumb.tsx  Charts.tsx  CoachLibrary.tsx  Copilot.tsx  Generator.tsx  GraphEvidence.tsx  ProtocolsTeaser.tsx
