[project]
name = "future-kg-backend"
version = "0.1.0"
description = "Knowledge-graph coaching platform — Future take-home (track 2)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.23",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
# Heavier deps wired in at the retrieval/generation steps, kept out of the
# core image so the graph + safety slice builds and tests fast.
ml = [
    "sentence-transformers>=3.0",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "anthropic>=0.34",
]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
