[project]
name = "future-kg-backend"
version = "0.1.0"
description = "Knowledge-graph coaching platform — Future take-home (track 2)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.23",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "rapidfuzz>=3.9",
    "fastembed>=0.3",
    "anthropic>=0.40",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
